--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
+    "encoding": "^0.1.13",
     "firebase": "^9.22.1",
+    "formik": "^2.4.1",
     "next": "13.4.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "20.2.5",
@@ -22,8 +26,15 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "postcss": "8.4.24",
+    "postcss-import": "^15.1.0",
     "prettier": "^2.8.8",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true
   }
 }
